Mejoras al instalador