@@ -127,10 +127,21 @@
 	<build>
 		
 		<plugins>
-			<!-- Plugin de Spring Boot -->
+			 <!-- Solo dejar este plugin para empaquetar la aplicación -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.distribuciones.omega.MainApp</mainClass>
+					<layout>JAR</layout>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<!-- Plugin para JavaFX (ejecución) -->
@@ -139,38 +150,14 @@
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.8</version>
 				<configuration>
-				<mainClass>com.distribuciones.omega.MainApp</mainClass>
-				<options>
-					<option>--add-modules</option>
-					<option>javafx.controls,javafx.fxml,javafx.web</option>
-				</options>
+					<mainClass>com.distribuciones.omega.MainApp</mainClass>
+					<options>
+						<option>--add-modules</option>
+						<option>javafx.controls,javafx.fxml,javafx.web</option>
+						<option>--add-opens</option>
+						<option>java.base/java.lang=ALL-UNNAMED</option>
+					</options>
 				</configuration>
-			</plugin>
-
-			<!-- Plugin para ensamblado -->
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.distribuciones.omega.MainApp</mainClass>
-						</manifest>
-					</archive>
-					<descriptorRefs>
-						<descriptorRef>jar-with-dependencies</descriptorRef>
-					</descriptorRefs>
-					<finalName>distribuciones-omega</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<!-- Plugin para copiar dependencias -->
